scripts/nullaway/original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8.txt
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:40: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return members.get(s);
        ^
    (see http://t.uber.com/nullaway )
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:67: error: [NullAway] initializer method does not guarantee @NonNull field dormRoom (line 48) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    Student(Gender gender, int grade, double gpa, Race race){
    ^
    (see http://t.uber.com/nullaway )
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:368: error: [NullAway] assigning @Nullable expression to @NonNull field
        dormRoom=null;
                ^
    (see http://t.uber.com/nullaway )
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Sim.java:146: error: [NullAway] @NonNull static field theInstance not initialized
    private static Sim theInstance;
                       ^
    (see http://t.uber.com/nullaway )
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/FreshmanHousingSelection.java:14: error: [NullAway] @NonNull static field theInstance not initialized
    private static FreshmanHousingSelection theInstance;
                                            ^
    (see http://t.uber.com/nullaway )
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/StatsPrinter.java:15: error: [NullAway] @NonNull static field theInstance not initialized
    private static StatsPrinter theInstance;
                                ^
    (see http://t.uber.com/nullaway )
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/UpperclassHousingSelection.java:17: error: [NullAway] @NonNull static field theInstance not initialized
    private static UpperclassHousingSelection theInstance;
                                              ^
    (see http://t.uber.com/nullaway )
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/UpperclassHousingSelection.java:89: error: [NullAway] dereferenced expression upperclassmen is @Nullable
        for(int x=upperclassmen.size()-1; x>=0; x--){
                               ^
    (see http://t.uber.com/nullaway )
../original/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/FreshmanFactory.java:16: error: [NullAway] @NonNull static field factory not initialized
    private static FreshmanFactory factory;
                                   ^
    (see http://t.uber.com/nullaway )
9 errors
